# big-data-analysis

./: README.md
final-proj/: README.md  main.py  pyproject.toml
final-proj/data-training/: classification.py
final-proj/docs/: 00_installation.md  01_data_collection.md  02_exploratory_analysis.md  03_preprocessing.md  04_data_splitting.md  05_model_selection.md  06_model_training.md  README.md
final-proj/models/: classification_model.joblib  regression_model.joblib
final-proj/scripts/: train_classification.py
final-proj/src/: __init__.py  config.py  data_cleaning.py  data_splitting.py  exploratory_data_analysis.py  model_evaluation.py  model_selection.py  model_training.py  models.py  pipeline.py  pre_processing.py  utils.py
lab1/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
lab1/docs/: laboratory-analysis.md
lab2/: .gitignore  README.md  main.py  pyproject.toml  regression.py  requirements.txt
lab2/scripts/: train_regression.py
lab2/src/: __init__.py
